--- a/deploy/php/Dockerfile.development
+++ b/deploy/php/Dockerfile.development
@@ -6,9 +6,8 @@ RUN apt update \
     && pecl install apcu \
     && docker-php-ext-enable apcu \
     && docker-php-ext-configure zip \
-    && docker-php-ext-install zip
-
-RUN pecl install xdebug \
+    && docker-php-ext-install zip \
+    && pecl install xdebug \
     && docker-php-ext-enable xdebug
 
 # Install composer
