--- a/deploy/php/php.ini
+++ b/deploy/php/php.ini
@@ -1,5 +1,5 @@
 [Xdebug]
-zend_extension=xdebug
-xdebug.mode=develop,debug
-xdebug.client_host=host.docker.internal
+xdebug.mode=debug
+xdebug.discover_client_host=1
 xdebug.start_with_request=yes
+xdebug.log_level=0
