Install package "friendsofphp/php-cs-fixer"
Installation command:

$ mkdir --parents tools/php-cs-fixer
$ composer require --working-dir=tools/php-cs-fixer friendsofphp/php-cs-fixer

More info: https://github.com/FriendsOfPHP/PHP-CS-Fixer

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@
 /vendor/
 ###< symfony/framework-bundle ###
 
+###> cs fixer ###
+/tools/php-cs-fixer/vendor/
+.php-cs-fixer.cache
+###< cs fixer ###
 
 ###> phpstorm ###
 .idea
