--- a/docker/php/Dockerfile.development
+++ b/docker/php/Dockerfile.development
@@ -19,15 +19,11 @@ RUN set -x \
     && apt-get install -y nodejs \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Symfony Installer
-RUN curl -sS https://get.symfony.com/cli/installer | bash
-RUN mv /root/.symfony/bin/symfony /usr/local/bin/symfony
-
 # Configure PHP
-COPY ./deploy/php/php.ini /usr/local/etc/php/
+COPY ./docker/php/php.ini /usr/local/etc/php/
 
 # Configure virtual host
-COPY ./deploy/apache/000-default.conf /etc/apache2/sites-available/000-default.conf
+COPY ./docker/apache/000-default.conf /etc/apache2/sites-available/000-default.conf
 
 WORKDIR /var/www
 
